  a ribbon is closed.


New Features and Enhancements
-----------------------------
* Added CHGlobal class.
  The CHGlobal class is a wrapper for a global memory handle. It automatically
  frees the global memory when it goes out of scope.
  
* Extended the CGlobalLock class.
  The CGlobalLock class is used to automatically lock and unlock global memory.
  Global memory is used to hold memory for DEVNAMES and DEVMODE structures.
  When the global memory is locked, we acquire a pointer we can use to access
  its contents. CDevMode and CDevNames are useful typedefs for CGlobalLock.
  The global memory is locked when CGlobalLock is constructed, and unlocked
  when CGlobalLock is destructed.  


Changes in detail
-----------------
Added Console                                    sample
Added CHGlobal                                   class
Added CGlobalLock<DEVNAMES>::GetDeviceName       member function
Added CGlobalLock<DEVNAMES>::GetDriverName       member function
Added CGlobalLock<DEVNAMES>::GetPortName         member function
Added CGlobalLock<DEVNAMES>::IsDefaultPrinter    member function
Added CScrollView::GetLineScrollSize             member function
Added CScrollView::GetPageScrollSize             member function

Added VS2017 project files to all samples and tutorials

Modified ::GetApp  global function               Now returns a pointer to CWinApp.

Updated the tutorials 



Version 8.6
===========

New Features and Enhancements
-----------------------------
* m_hWnd is no longer a protected member variable of CWnd. Use either *this or
  GetHwnd() to access the window handle association associated with the CWnd.
  Eliminating protected member variables keeps the code robust, and is
  consistent with good software design.
   
* The programming style has been updated, and the Hungarian notation has 
  been removed. The m_ prefix for member variables has been retained, as 
  has a p prefix for pointers.
  