@@ -15,11 +15,19 @@ New Features and Enhancements
   
 * Extended the CGlobalLock class.
   The CGlobalLock class is used to automatically lock and unlock global memory.
-  Global memory is used to hold memory for DEVNAMES and DEVMODE structures.
+  This can be useful when working with printers. Global memory is used to hold
+  memory for DEVNAMES and DEVMODE structures.
+
   When the global memory is locked, we acquire a pointer we can use to access
   its contents. CDevMode and CDevNames are useful typedefs for CGlobalLock.
   The global memory is locked when CGlobalLock is constructed, and unlocked
-  when CGlobalLock is destructed.  
+  when CGlobalLock is destructed.
+  
+* Extended CScrollView
+  CScrollView now processes the following keys:
+  - Home and End.
+  - Page Up and Page Down.
+  - Left, right, up, and down arrow keys.
 
 
 Changes in detail
